# inpolium_test_task

./: .gitignore  README.md  constants.py  custom_session.py  db.py  main.py  pyproject.toml  requirements.txt
data/: all_data.csv
data/arbeitssicherheit-unfallschutz/: page_1.csv  page_2.csv
data/entsorgung/: page_1.csv  page_2.csv
data/gastronomiebedarf/: page_1.csv  page_2.csv
data/hygienebekleidung/: page_1.csv  page_2.csv
data/medical/: page_1.csv  page_2.csv
data/mobile-reinigung/: page_1.csv  page_2.csv
data/persoenliche-schutzausruestung-psa/: page_1.csv  page_2.csv
data/reinigungschemie/: page_1.csv  page_2.csv
data/reinigungshilfen/: page_1.csv  page_2.csv
data/reinigungsmaschinen/: page_1.csv  page_2.csv
data/spezialanwendungen/: page_1.csv  page_2.csv
data/waschraum-hygiene/: page_1.csv  page_2.csv
