[tool.poetry]
name = "inpolium-test-task"
version = "0.1.0"
description = ""
authors = ["DaTrEvTeR <rozhkovm176@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
aiosqlite = "^0.20.0"
selenium = "^4.25.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
